Completed prework assignment

--- a/Check_for_Understanding.ipynb
+++ b/Check_for_Understanding.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "id": "ca24709c",
    "metadata": {},
    "outputs": [
@@ -158,10 +158,11 @@
      "text": [
       "token_ids: tensor([0, 1, 9])\n",
       "E=\n",
-      " tensor([[-3.0054,  0.1398, -0.8221,  1.4931],\n",
-      "        [ 0.3239, -0.5691, -1.4837, -0.0240],\n",
-      "        [ 0.7328,  0.6945,  0.0822, -1.0373]], grad_fn=<EmbeddingBackward0>)\n",
-      "E.shape: torch.Size([3, 4])\n"
+      " tensor([[ 0.8667, -0.0100, -2.3212, -1.6080],\n",
+      "        [-0.2713,  0.9129, -0.5020, -0.6640],\n",
+      "        [ 1.8090,  0.9725, -1.0324, -1.4201]], grad_fn=<EmbeddingBackward0>)\n",
+      "E.shape: torch.Size([3, 4])\n",
+      "E.mean: tensor(-0.2724, grad_fn=<MeanBackward0>)\n"
      ]
     }
    ],
@@ -194,10 +195,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "60e75f20",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean_E.shape: torch.Size([4])\n",
+      "y_pred: tensor([-0.7378], grad_fn=<ViewBackward0>) shape: torch.Size([1])\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 4: From embeddings to a prediction\n",
     "# NOTE: This exercise depends on Exercise 3 — complete that first.\n",
@@ -206,14 +216,14 @@
     "# 2) Create a Linear layer (4 -> 1) called head\n",
     "# 3) Produce y_pred as shape (1,) or scalar\n",
     "\n",
-    "mean_E = None  # YOUR CODE HERE\n",
-    "head = None  # YOUR CODE HERE\n",
+    "mean_E = E.mean(dim=0)\n",
+    "head = nn.Linear(in_features=4, out_features=1)\n",
     "\n",
-    "y_pred = None  # YOUR CODE HERE\n",
+    "y_pred = head(mean_E)\n",
     "\n",
     "# Print statements (uncomment after implementing)\n",
-    "# print(\"mean_E.shape:\", mean_E.shape)\n",
-    "# print(\"y_pred:\", y_pred, \"shape:\", y_pred.shape)\n",
+    "print(\"mean_E.shape:\", mean_E.shape)\n",
+    "print(\"y_pred:\", y_pred, \"shape:\", y_pred.shape)\n",
     "\n",
     "# --- autograder asserts (do not delete) ---\n",
     "assert mean_E.shape == (4,), f\"mean_E must be shape (4,), got {tuple(mean_E.shape)}\"\n",
@@ -232,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "id": "947292e4",
    "metadata": {},
    "outputs": [
@@ -240,18 +250,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SimpleNet()\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "Model must have two Linear layers (fc1, fc2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 25\u001b[39m\n\u001b[32m     23\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(model, nn.Module), \u001b[33m\"\u001b[39m\u001b[33mmodel must be an nn.Module\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     24\u001b[39m params = \u001b[38;5;28mdict\u001b[39m(model.named_parameters())\n\u001b[32m---> \u001b[39m\u001b[32m25\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mfc1.weight\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m params \u001b[38;5;129;01mand\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mfc2.weight\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m params, \u001b[33m\"\u001b[39m\u001b[33mModel must have two Linear layers (fc1, fc2)\u001b[39m\u001b[33m\"\u001b[39m\n",
-      "\u001b[31mAssertionError\u001b[39m: Model must have two Linear layers (fc1, fc2)"
+      "SimpleNet(\n",
+      "  (fc1): Linear(in_features=6, out_features=120, bias=True)\n",
+      "  (fc2): Linear(in_features=120, out_features=1, bias=True)\n",
+      ")\n"
      ]
     }
    ],
@@ -267,12 +269,14 @@
     "class SimpleNet(nn.Module):\n",
     "    def __init__(self, input_dim=6, hidden_dim=8, output_dim=1):\n",
     "        super().__init__()\n",
-    "        # YOUR CODE HERE — define layers (fc1, fc2, activation)\n",
-    "        pass\n",
+    "        self.fc1 = nn.Linear(in_features=6,\n",
+    "                             out_features=120)\n",
+    "        self.fc2 = nn.Linear(120, 1)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        # YOUR CODE HERE — implement forward pass\n",
-    "        pass\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = F.relu(self.fc2(x))\n",
+    "        return x\n",
     "\n",
     "model = SimpleNet()\n",
     "print(model)\n",
@@ -285,10 +289,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "8d349030",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "out=\n",
+      " tensor([[0.4059],\n",
+      "        [0.1005],\n",
+      "        [0.0971],\n",
+      "        [0.0690]], grad_fn=<ReluBackward0>)\n",
+      "out.shape: torch.Size([4, 1])\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 6: Forward pass with dummy data\n",
     "# NOTE: This exercise depends on Exercise 5 — complete that first.\n",
@@ -296,13 +313,14 @@
     "# 1) Create dummy input x of shape (4, 6)\n",
     "# 2) Run out = model(x)\n",
     "# 3) Print out and out.shape\n",
+    "import torch.nn.functional as F\n",
     "\n",
-    "x = None  # YOUR CODE HERE\n",
-    "out = None  # YOUR CODE HERE\n",
+    "x = torch.randn(4, 6)\n",
+    "out = model(x)\n",
     "\n",
     "# Print statements (uncomment after implementing)\n",
-    "# print(\"out=\\n\", out)\n",
-    "# print(\"out.shape:\", out.shape)\n",
+    "print(\"out=\\n\", out)\n",
+    "print(\"out.shape:\", out.shape)\n",
     "\n",
     "# --- autograder asserts (do not delete) ---\n",
     "assert x.shape == (4, 6), f\"x must be shape (4,6), got {tuple(x.shape)}\"\n",
@@ -319,10 +337,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "60eaed50",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss_before: 0.8043819069862366\n",
+      "loss_after : 0.6597929000854492\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 7: One training step\n",
     "# NOTE: This exercise depends on Exercise 5 — complete that first.\n",
@@ -330,6 +357,7 @@
     "# 1) Create inputs x_train (batch=8, input_dim=6) and targets y_train (shape (8,1))\n",
     "# 2) Define loss_fn = MSELoss and opt = SGD(model.parameters(), lr=0.1)\n",
     "# 3) Perform exactly one update step and print loss_before and loss_after\n",
+    "import torch.optim as optim\n",
     "\n",
     "torch.manual_seed(123)  # deterministic for this part\n",
     "\n",
@@ -338,21 +366,25 @@
     "true_w = torch.tensor([[0.5], [-1.0], [0.3], [0.0], [1.2], [-0.7]])\n",
     "y_train = x_train @ true_w + 0.01 * torch.randn(8, 1)\n",
     "\n",
-    "loss_fn = None  # YOUR CODE HERE\n",
-    "opt = None  # YOUR CODE HERE\n",
+    "loss_fn = nn.MSELoss()\n",
+    "opt = optim.SGD(model.parameters(), lr=0.1)\n",
     "\n",
     "# YOUR CODE HERE — compute loss_before (forward pass + loss)\n",
-    "loss_before = None\n",
+    "y_pred_before = model(x_train)\n",
+    "loss_before = loss_fn(y_pred_before, y_train)\n",
     "\n",
     "# YOUR CODE HERE — perform backward pass and optimizer step\n",
-    "\n",
+    "opt.zero_grad()         \n",
+    "loss_before.backward()  \n",
+    "opt.step()\n",
     "\n",
     "# YOUR CODE HERE — compute loss_after (forward pass + loss)\n",
-    "loss_after = None\n",
+    "y_pred_after = model(x_train)\n",
+    "loss_after = loss_fn(y_pred_after, y_train)\n",
     "\n",
     "# Print statements (uncomment after implementing)\n",
-    "# print(\"loss_before:\", float(loss_before))\n",
-    "# print(\"loss_after :\", float(loss_after))\n",
+    "print(\"loss_before:\", float(loss_before))\n",
+    "print(\"loss_after :\", float(loss_after))\n",
     "\n",
     "# --- autograder asserts (do not delete) ---\n",
     "assert loss_before.shape == (), \"loss_before must be a scalar tensor\"\n",
